Debian packaging, tidy-ups and bug fixes

--- a/SOURCES/nagrestconf-1/etc/nagrestconf/nagrestconf.ini
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/nagrestconf.ini
@@ -1,5 +1,6 @@
 ; Configuration file for nagrestconf
 
+resturl  = "http://127.0.0.1/rest"
 folder[] = "local"
 restuser = "user"
 restpass = "pass"
