--- a/SOURCES/nagrestconf-1/debian/rules
+++ b/SOURCES/nagrestconf-1/debian/rules
@@ -48,6 +48,7 @@ install: build
 	install -D -m 755 scripts/nagctl $(DESTDIR)/usr/bin/nagctl
 	install -D -m 755 scripts/restart_nagios $(DESTDIR)/usr/bin/restart_nagios
 	install -D -m 755 scripts/slc_configure $(DESTDIR)/usr/bin/slc_configure
+	install -D -m 755 scripts/upgrade_setup_files.sh $(DESTDIR)/usr/bin/upgrade_setup_files.sh
 
 	# PHP Directories
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/
