Move php files from /var/www to /usr/share for RPMs

--- a/SOURCES/nagrestconf-1/etc/httpd/conf.d/rest.conf
+++ b/SOURCES/nagrestconf-1/etc/httpd/conf.d/rest.conf
@@ -1,5 +1,8 @@
-<Directory /var/www/html/rest/> 
-  SSLRequireSSL
+Alias /rest /usr/share/nagrestconf/htdocs/rest
+
+<Directory /usr/share/nagrestconf/htdocs/rest/> 
+
+  #SSLRequireSSL
 
   # Only allow from the local host
   Order deny,allow
