--- a/SOURCES/nagrestconf-1/etc/httpd/conf.d/nagrestconf.conf
+++ b/SOURCES/nagrestconf-1/etc/httpd/conf.d/nagrestconf.conf
@@ -1,17 +1,21 @@
-Alias /nagrestconf "/var/www/html/nagrestconf"
+Alias /nagrestconf "/usr/share/nagrestconf/htdocs/nagrestconf"
 
-<Directory /var/www/html/nagrestconf/>
-#  SSLRequireSSL
-#   Options None
-   AllowOverride None
-   Order allow,deny
-   Allow from all
-#   Order deny,allow
-#   Deny from all
-#   Allow from 127.0.0.1
-   AuthName "Nagios Access"
-   AuthType Basic
-   AuthUserFile /etc/nagios/htpasswd.users
-   Require valid-user
+<Directory /usr/share/nagrestconf/htdocs/nagrestconf/>
+
+  #SSLRequireSSL
+
+  # Only allow from the local host
+  Order deny,allow
+  Deny from all
+  Allow from 127.0.0.1
+
+  AllowOverride All 
+
+  # Require authentication
+  #AuthName "REST Access" 
+  #AuthType Basic 
+  #AuthUserFile /etc/nagios/htpasswd.users 
+  #Require valid-user 
+
 </Directory>
 
