Updated config for nagios 3.4.1

--- a/SOURCES/nagrestconf-1/doc/initial-config/cgi.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config/cgi.cfg
@@ -1,8 +1,8 @@
 #################################################################
 #
-# CGI.CFG - Sample CGI Configuration File for Nagios 3.0.6
+# CGI.CFG - Sample CGI Configuration File for Nagios 3.4.1
 #
-# Last Modified: 11-30-2008
+# Last Modified: 23-Oct-2012
 #
 #################################################################
 
@@ -174,6 +174,16 @@ authorized_for_all_host_commands=nagiosadmin
 
 
 
+# READ-ONLY USERS
+# A comma-delimited list of usernames that have read-only rights in
+# the CGIs.  This will block any service or host commands normally shown
+# on the extinfo CGI pages.  It will also block comments from being shown
+# to read-only users.
+
+#authorized_for_read_only=user1,user2
+
+
+
 
 # STATUSMAP BACKGROUND IMAGE
 # This option allows you to specify an image to be used as a 
@@ -187,6 +197,20 @@ authorized_for_all_host_commands=nagiosadmin
 # generates the image.
 
 #statusmap_background_image=smbackground.gd2
+
+
+
+
+# STATUSMAP TRANSPARENCY INDEX COLOR
+# These options set the r,g,b values of the background color used the statusmap CGI,
+# so normal browsers that can't show real png transparency set the desired color as
+# a background color instead (to make it look pretty).  
+# Defaults to white: (R,G,B) = (255,255,255).
+
+#color_transparency_index_r=255
+#color_transparency_index_g=255
+#color_transparency_index_b=255
+
 
 
 
@@ -251,6 +275,13 @@ ping_syntax=/bin/ping -n -U -c 5 $HOSTADDRESS$
 
 refresh_rate=90
 
+# DEFAULT PAGE LIMIT
+# This option allows you to specify the default number of results 
+# displayed on the status.cgi.  This number can be adjusted from
+# within the UI after the initial page load. Setting this to 0
+# will show all results.  
+
+result_limit=100
 
 
 # ESCAPE HTML TAGS
