--- a/SOURCES/nagrestconf-1/doc/initial-config/nagios.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config/nagios.cfg
@@ -1,12 +1,12 @@
 ##############################################################################
 #
-# NAGIOS.CFG - Sample Main Config File for Nagios 3.0.6
+# NAGIOS.CFG - Sample Main Config File for Nagios 3.4.1
 #
 # Read the documentation for more information on this configuration
 # file.  I've provided some comments here, but things may not be so
 # clear without further explanation.
 #
-# Last Modified: 10-15-2008
+# Last Modified: 22-Oct-2012
 #
 ##############################################################################
 
@@ -620,7 +620,7 @@ retain_state_information=1
 # service state information before it shuts down.  The state 
 # information in this file is also read immediately prior to
 # starting to monitor the network when Nagios is restarted.
-# This file is used only if the preserve_state_information
+# This file is used only if the retain_state_information
 # variable is set to 1.
 
 state_retention_file=/var/log/nagios/retention.dat
@@ -702,6 +702,31 @@ retained_contact_service_attribute_mask=0
 # have not been tested much, so your mileage is likely to vary...
 
 interval_length=57
+
+
+
+# CHECK FOR UPDATES
+# This option determines whether Nagios will automatically check to
+# see if new updates (releases) are available.  It is recommend that you
+# enable this option to ensure that you stay on top of the latest critical
+# patches to Nagios.  Nagios is critical to you - make sure you keep it in
+# good shape.  Nagios will check once a day for new updates. Data collected
+# by Nagios Enterprises from the update check is processed in accordance
+# with our privacy policy - see http://api.nagios.org for details.
+
+check_for_updates=1
+
+
+
+# BARE UPDATE CHECK
+# This option deterines what data Nagios will send to api.nagios.org when
+# it checks for updates.  By default, Nagios will send information on the
+# current version of Nagios you have installed, as well as an indicator as
+# to whether this was a new installation or not.  Nagios Enterprises uses
+# this data to determine the number of users running specific version of
+# Nagios.  Enable this option if you do not want this information to be sent.
+
+bare_update_check=0
 
 
 
@@ -991,6 +1016,22 @@ check_service_freshness=1
 # disabled service freshness checking, this option has no effect.
 
 service_freshness_check_interval=60
+
+
+
+# SERVICE CHECK TIMEOUT STATE
+# This setting determines the state Nagios will report when a
+# service check times out - that is does not respond within
+# service_check_timeout seconds.  This can be useful if a
+# machine is running at too high a load and you do not want
+# to consider a failed service check to be critical (the default).
+# Valid settings are:
+# c - Critical (default)
+# u - Unknown
+# w - Warning
+# o - OK
+
+service_check_timeout_state=c
 
 
 
