Added support for querying a REST server requiring an SSL key and cert

--- a/SOURCES/nagrestconf-1/etc/nagrestconf/nagrestconf.ini
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/nagrestconf.ini
@@ -5,3 +5,7 @@ folder[] = "local"
 restuser = "user"
 restpass = "pass"
 
+; Use a pasword-less ssl key and certificate
+;sslkey = "/path/to/key"
+;sslcert = "/path/to/cert"
+
