Added schedulehostdowntime and delhostdowntime

--- a/SOURCES/nagrestconf-1/etc/nagrestconf/nagctl.conf
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/nagctl.conf
@@ -10,6 +10,9 @@ NAG_CONFIG=$NAG_DIR/nagios.cfg
 # Where the nagios.cmd file is.
 COMMANDFILE='/var/log/nagios/rw/nagios.cmd'
 
+# Where the status.dat file is.
+STATUSFILE='/var/log/nagios/status.dat'
+
 # Where nagios is.
 NAGIOSBIN=/usr/sbin/nagios
 
