--- a/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
@@ -139,8 +139,8 @@ check_external_commands=1
 # NOTE: Setting this value to -1 causes Nagios to check the external
 # command file as often as possible.
 
-#command_check_interval=15s
-command_check_interval=-1
+#command_check_interval=2s
+command_check_interval=5s
 
 
 
@@ -227,9 +227,9 @@ event_broker_options=-1
 #broker_module=/somewhere/module1.o
 #broker_module=/somewhere/module2.o arg1 arg2=3 debug=0
 
-#broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live debug=0 
-#broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o server=localhost:4730 eventhandler=yes services=yes hosts=yes key=key1 debug=0
-broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o config=/etc/mod_gearman.conf
+#broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live
+broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o server=localhost:4730 eventhandler=no services=no hosts=no key=key1 result_workers=10
+#broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o config=/etc/mod_gearman_neb.conf
 
 
 
@@ -364,7 +364,7 @@ service_inter_check_delay_method=s
 # program start time that an initial check of all services should
 # be completed.  Default is 30 minutes.
 
-max_service_check_spread=30
+max_service_check_spread=4
 
 
 
@@ -405,7 +405,7 @@ host_inter_check_delay_method=s
 # program start time that an initial check of all hosts should
 # be completed.  Default is 30 minutes.
 
-max_host_check_spread=30
+max_host_check_spread=5
 
 
 
@@ -436,7 +436,7 @@ check_result_reaper_frequency=10
 # returning control back to Nagios so it can perform other
 # duties.
 
-max_check_result_reaper_time=10
+max_check_result_reaper_time=120
 
 
 
@@ -558,7 +558,7 @@ auto_reschedule_checks=0
 # WARNING: THIS IS AN EXPERIMENTAL FEATURE - IT CAN DEGRADE
 # PERFORMANCE, RATHER THAN INCREASE IT, IF USED IMPROPERLY
 
-auto_rescheduling_interval=30
+auto_rescheduling_interval=60
 
 
 
@@ -572,7 +572,7 @@ auto_rescheduling_interval=30
 # WARNING: THIS IS AN EXPERIMENTAL FEATURE - IT CAN DEGRADE
 # PERFORMANCE, RATHER THAN INCREASE IT, IF USED IMPROPERLY
 
-auto_rescheduling_window=180
+auto_rescheduling_window=600
 
 
 
@@ -580,7 +580,7 @@ auto_rescheduling_window=180
 # This is the number of seconds to sleep between checking for system
 # events and service checks that need to be run.
 
-sleep_time=0.1
+sleep_time=0.25
 
 
 
@@ -592,8 +592,8 @@ sleep_time=0.1
 # ocsp command, and performance data commands.  All values are in
 # seconds.
 
-service_check_timeout=10
-host_check_timeout=10
+service_check_timeout=60
+host_check_timeout=30
 event_handler_timeout=30
 notification_timeout=30
 ocsp_timeout=5
@@ -657,7 +657,7 @@ use_retained_program_state=1
 # If you want to use retained scheduling info, set this
 # value to 1.  If not, set this value to 0.
 
-use_retained_scheduling_info=1
+use_retained_scheduling_info=0
 
 
 
@@ -750,7 +750,7 @@ use_aggressive_host_checking=0
 # disabling the execution of service checks, leave this enabled!
 # Values: 1 = enable checks, 0 = disable checks
 
-execute_service_checks=1
+execute_service_checks=0
 
 
 
@@ -772,7 +772,7 @@ accept_passive_service_checks=1
 # disabling the execution of host checks, leave this enabled!
 # Values: 1 = enable checks, 0 = disable checks
 
-execute_host_checks=1
+execute_host_checks=0
 
 
 
@@ -814,7 +814,8 @@ enable_event_handlers=1
 # performance data.
 # Values: 1 = process performance data, 0 = do not process performance data
 
-process_performance_data=0
+process_performance_data=1
+broker_module=/usr/lib64/npcdmod.o config_file=/etc/pnp4nagios/npcd.cfg
 
 #
 # service performance data
@@ -948,7 +949,7 @@ obsess_over_hosts=0
 # define in your host configuration file. Read the HTML docs for
 # more information on implementing distributed monitoring.
 
-#ochp_command=submit_hostcheck_result
+#ochp_command=somecommand
 
 
 
@@ -1284,7 +1285,7 @@ enable_environment_macros=0
 # Value: 1 - Child processes fork() twice
 #        0 - Child processes fork() just once
 
-#child_processes_fork_twice=1
+child_processes_fork_twice=1
 
 
 
