--- a/SOURCES/nagrestconf-1/etc/nagrestconf/nagctl.conf
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/nagctl.conf
@@ -7,6 +7,10 @@ NAG_OBJ_DIR=$NAG_DIR/objects
 # Where nagios.cfg file is.
 NAG_CONFIG=$NAG_DIR/nagios.cfg
 
+# Where some livestatus bits are
+#LIVESTATUSCOMMANDFILE='/var/log/nagios/rw/live'
+#LIVESTATUSUNIXCAT='/usr/bin/unixcat'
+
 # Where the nagios.cmd file is.
 COMMANDFILE='/var/log/nagios/rw/nagios.cmd'
 
