Add the nagios plugin name to no-checks-received to help pnp4nagios on the collector

--- a/SOURCES/nagrestconf-1/etc/nagrestconf/csv2nag.conf
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/csv2nag.conf
@@ -1,2 +1,10 @@
 # Set DCC=1 if this is a data centre collector
 DCC=0
+
+# pnp4nagios helper.
+#remote_executor="check_nrpe"
+REMOTE_EXECUTOR="check_any"
+
+# The command used to check freshness (on DCC)
+FRESHNESS_CHECK_COMMAND="no-checks-received"
+
