--- a/SOURCES/nagrestconf-1/etc/nagrestconf/nagrestconf.ini
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/nagrestconf.ini
@@ -1,10 +1,10 @@
 ; Configuration file for nagrestconf
 
+;resturl  = "https://127.0.0.1/rest"
 resturl  = "http://127.0.0.1/rest"
 folder[] = "local"
 restuser = "user"
 restpass = "pass"
-
 ; Use a pasword-less ssl key and certificate
 ;sslkey = "/path/to/key"
 ;sslcert = "/path/to/cert"
