--- a/SOURCES/nagrestconf-1/etc/nagrestconf/nagctl.conf
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/nagctl.conf
@@ -15,7 +15,7 @@ NAG_CONFIG=$NAG_DIR/nagios.cfg
 COMMANDFILE='/var/log/nagios/rw/nagios.cmd'
 
 # Where the status.dat file is.
-STATUSFILE='/var/log/nagios/status.dat'
+STATUSFILE='/var/log/nagios/status/status.dat'
 
 # Where nagios is.
 NAGIOSBIN=/usr/sbin/nagios
