--- a/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
@@ -227,9 +227,8 @@ event_broker_options=-1
 #broker_module=/somewhere/module1.o
 #broker_module=/somewhere/module2.o arg1 arg2=3 debug=0
 
-#broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live
-broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o server=localhost:4730 eventhandler=no services=no hosts=no key=key1 result_workers=10
-#broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o config=/etc/mod_gearman_neb.conf
+broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live
+broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o server=localhost:4730 eventhandler=no services=no hosts=no key=key1 result_workers=10 logfile=/var/mod_gearman/mod_gearman_worker.log
 
 
 
@@ -967,7 +966,7 @@ obsess_over_hosts=0
 # passively into the correct state from the view of this server.
 # Values: 1 = perform translation, 0 = do not translate (default)
 
-translate_passive_host_checks=0
+translate_passive_host_checks=1
 
 
 
@@ -1032,7 +1031,7 @@ service_freshness_check_interval=60
 # w - Warning
 # o - OK
 
-service_check_timeout_state=c
+#service_check_timeout_state=c
 
 
 
@@ -1104,7 +1103,7 @@ high_host_flap_threshold=20.0
 #	strict-iso8601	(YYYY-MM-DDTHH:MM:SS)
 #
 
-date_format=us
+date_format=euro
 
 
 
