Support check results and configuration updates via remote ssh forwarding

--- a/SOURCES/nagrestconf-1/etc/nagrestconf/restart_nagios.conf
+++ b/SOURCES/nagrestconf-1/etc/nagrestconf/restart_nagios.conf
@@ -5,3 +5,15 @@ NAG_INITD=nagios
 # Leave unset if there is no dcc.
 #dcc="10.0.0.0"
 
+# Use a custom tunnel with svnsync - only when a dcc is used.
+# This tunnel should have been defined in ~/.subversion/config in the
+# [tunnels] section. For example, to allow svnsync to connect to a
+# different ssh port add 'tun1 = ssh -p 2222' to the [tunnels] section
+# then instead of 'SSH=ssh' (the default for using svn+ssh), use:
+#SSH=tun1
+
+# Add extra command line options to ssh - only when a dcc is used.
+# SSH is used just to copy a file to /tmp at the dcc if there is one.
+# For example to connect to a different ssh port:
+#SSH_OPTS="-p 2222" 
+
