Changes for updated mod_gearman 1.4.2

--- a/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
@@ -228,7 +228,7 @@ event_broker_options=-1
 #broker_module=/somewhere/module2.o arg1 arg2=3 debug=0
 
 broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live
-broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o server=localhost:4730 eventhandler=no services=no hosts=no key=key1 result_workers=10 logfile=/var/mod_gearman/mod_gearman_worker.log
+broker_module=/usr/lib64/mod_gearman/mod_gearman.o config=/etc/mod_gearman/mod_gearman_neb.conf
 
 
 
