--- a/SOURCES/nagrestconf-1/doc/initial-config/nagios.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config/nagios.cfg
@@ -228,7 +228,7 @@ event_broker_options=-1
 #broker_module=/somewhere/module2.o arg1 arg2=3 debug=0
 
 #broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live debug=0 
-#broker_module=/usr/lib64/mod_gearman/neb/mod_gearman.o config=/etc/mod_gearman.conf
+#broker_module=/usr/lib64/mod_gearman/mod_gearman.o config=/etc/mod_gearman_neb.conf
 
 
 
