Remove broker defs from sample.

--- a/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
+++ b/SOURCES/nagrestconf-1/doc/initial-config.dcc/nagios.cfg
@@ -227,8 +227,8 @@ event_broker_options=-1
 #broker_module=/somewhere/module1.o
 #broker_module=/somewhere/module2.o arg1 arg2=3 debug=0
 
-broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live
-broker_module=/usr/lib64/mod_gearman/mod_gearman.o config=/etc/mod_gearman/mod_gearman_neb.conf
+#broker_module=/usr/local/lib/mk-livestatus/livestatus.o /var/log/nagios/rw/live
+#broker_module=/usr/lib64/mod_gearman/mod_gearman.o config=/etc/mod_gearman/mod_gearman_neb.conf
 
 
 
@@ -813,8 +813,8 @@ enable_event_handlers=1
 # performance data.
 # Values: 1 = process performance data, 0 = do not process performance data
 
-process_performance_data=1
-broker_module=/usr/lib64/pnp4nagios/npcdmod.o config_file=/etc/pnp4nagios/npcd.cfg
+process_performance_data=0
+#broker_module=/usr/lib64/pnp4nagios/npcdmod.o config_file=/etc/pnp4nagios/npcd.cfg
 
 #
 # service performance data
