Debian packaging fixes

--- a/SOURCES/nagrestconf-1/debian/rules
+++ b/SOURCES/nagrestconf-1/debian/rules
@@ -47,8 +47,12 @@ install: build
 	install -D -m 755 scripts/csv2nag $(DESTDIR)/usr/bin/csv2nag
 	install -D -m 755 scripts/nagctl $(DESTDIR)/usr/bin/nagctl
 	install -D -m 755 scripts/restart_nagios $(DESTDIR)/usr/bin/restart_nagios
+	install -D -m 755 scripts/dcc_configure $(DESTDIR)/usr/bin/dcc_configure
 	install -D -m 755 scripts/slc_configure $(DESTDIR)/usr/bin/slc_configure
 	install -D -m 755 scripts/upgrade_setup_files.sh $(DESTDIR)/usr/bin/upgrade_setup_files.sh
+	install -D -m 755 scripts/update_nagios $(DESTDIR)/usr/bin/update_nagios
+	install -D -m 755 scripts/auto_reschedule_nagios_check $(DESTDIR)/usr/bin/auto_reschedule_nagios_check
+	install -D -m 755 scripts/nagrestconf_install $(DESTDIR)/usr/bin/nagrestconf_install
 
 	# PHP Directories
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/
