--- a/SOURCES/nagrestconf-1/debian/rules
+++ b/SOURCES/nagrestconf-1/debian/rules
@@ -56,6 +56,8 @@ install: build
 
 	# PHP Directories
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/
+    install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/plugins/
+    install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/plugins-enabled/
 	cp -r nagrestconf $(DESTDIR)/usr/share/nagrestconf/htdocs/
 	cp -r rest $(DESTDIR)/usr/share/nagrestconf/htdocs/
 	find $(DESTDIR)/usr/share/nagrestconf -depth -name ".svn" -type d -exec rm -rf {} \;
