Added services-tab plugin (fixes)

--- a/SOURCES/nagrestconf-1/etc/httpd/conf.d/rest.conf
+++ b/SOURCES/nagrestconf-1/etc/httpd/conf.d/rest.conf
@@ -3,18 +3,30 @@ Alias /rest /usr/share/nagrestconf/htdocs/rest
 <Directory /usr/share/nagrestconf/htdocs/rest/> 
 
   #SSLRequireSSL
-
-  # Only allow from the local host
-  Order deny,allow
-  Deny from all
-  Allow from 127.0.0.1
-
+  Options ExecCGI
   AllowOverride All 
 
   # Require authentication
   #AuthName "REST Access" 
   #AuthType Basic 
   #AuthUserFile /etc/nagios/htpasswd.users 
-  #Require valid-user 
+
+  <IfModule mod_authz_core.c>
+      # Apache 2.4
+      <RequireAll>
+         Require all granted
+         # Require local
+         #Require valid-user
+      </RequireAll>
+  </IfModule>
+  <IfModule !mod_authz_core.c>
+      # Only allow from the local host
+      Order deny,allow
+      Deny from all
+      Allow from 127.0.0.1
+
+      #Require valid-user 
+  </IfModule>
 
 </Directory> 
+
