Debian package fixes

--- a/SOURCES/nagrestconf-1/debian/rules
+++ b/SOURCES/nagrestconf-1/debian/rules
@@ -58,11 +58,14 @@ install: build
 
 	# PHP Directories
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/
+	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/nagrestconf/scripts/
+	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/nagrestconf/upload/
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/nagrestconf/plugins/
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/nagrestconf/plugins-lib/
 	install -d -m 755 $(DESTDIR)/usr/share/nagrestconf/htdocs/nagrestconf/plugins-enabled/
 	cp -r nagrestconf $(DESTDIR)/usr/share/nagrestconf/htdocs/
 	cp -r rest $(DESTDIR)/usr/share/nagrestconf/htdocs/
+	install -D -m 755 nagrestconf/scripts/csv2json.sh $(DESTDIR)/usr/share/nagrestconf/htdocs/nagrestconf/scripts/csv2json.sh
 	find $(DESTDIR)/usr/share/nagrestconf -depth -name ".svn" -type d -exec rm -rf {} \;
 
 	# GUI Plugins
